--- a/package.json
+++ b/package.json
@@ -95,5 +95,8 @@
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3"
+  },
+  "overrides": {
+    "node-domexception": "npm:@remix-run/web-fetch-deprecated-node-domexception@^1.0.0"
   }
 }
