--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@continuedev/cli",
-  "version": "1.4.2",
+  "version": "0.0.0-dev",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
