--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "minimatch": "^10.0.3",
     "node-fetch": "^3.3.2",
     "open": "^10.1.0",
+    "posthog-node": "^5.6.0",
     "react": "^19.1.0",
     "readline-sync": "^1.4.10",
     "turndown": "^7.2.0",
