--- a/core/package.json
+++ b/core/package.json
@@ -55,7 +55,7 @@
     "@continuedev/config-types": "^1.0.13",
     "@continuedev/config-yaml": "file:../packages/config-yaml",
     "@continuedev/fetch": "file:../packages/fetch",
-    "@continuedev/llm-info": "^1.0.8",
+    "@continuedev/llm-info": "file:../packages/llm-info",
     "@continuedev/openai-adapters": "file:../packages/openai-adapters",
     "@modelcontextprotocol/sdk": "^1.12.0",
     "@mozilla/readability": "^0.5.0",
