--- a/.github/workflows/build-vscode-extension.yml
+++ b/.github/workflows/build-vscode-extension.yml
@@ -105,24 +105,7 @@ jobs:
           path: gui/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('gui/package-lock.json') }}
 
-      - name: Cache fetch node_modules
-        uses: actions/cache@v4
-        with:
-          path: packages/fetch/node_modules
-          key: ${{ runner.os }}-fetch-node-modules-${{ hashFiles('packages/fetch/package-lock.json') }}
-
-      - name: Cache config-yaml node_modules
-        uses: actions/cache@v4
-        with:
-          path: packages/config-yaml/node_modules
-          key: ${{ runner.os }}-config-yaml-node-modules-${{ hashFiles('packages/config-yaml/package-lock.json') }}
-
-      - name: Cache openai-adapters node_modules
-        uses: actions/cache@v4
-        with:
-          path: packages/openai-adapters/node_modules
-          key: ${{ runner.os }}-openai-adapters-node-modules-${{ hashFiles('packages/openai-adapters/package-lock.json') }}
-
+      # Build all packages using the authoritative build script
       - name: Build packages (Windows)
         run: ./scripts/build-packages.ps1
         if: matrix.os == 'windows-latest'
@@ -130,31 +113,6 @@ jobs:
       - name: Build packages (Unix)
         run: ./scripts/build-packages.sh
         if: matrix.os != 'windows-latest'
-
-      # Install and build packages in dependency order
-      - name: Install and build fetch
-        run: |
-          cd packages/fetch
-          npm ci
-          npm run build
-
-      - name: Install and build config-yaml
-        run: |
-          cd packages/config-yaml
-          npm ci
-          npm run build
-
-      - name: Install and build openai-adapters
-        run: |
-          cd packages/openai-adapters
-          npm ci
-          npm run build
-
-      - name: Install and build openai-adapters
-        run: |
-          cd packages/openai-adapters
-          npm ci
-          npm run build
 
       - name: Install extension Dependencies
         run: |
