--- a/.github/workflows/pr_checks.yaml
+++ b/.github/workflows/pr_checks.yaml
@@ -636,27 +636,12 @@ jobs:
           name: vscode-e2e-dependencies
           path: extensions/vscode/e2e/storage
 
-      - uses: actions/cache@v4
-        id: config-yaml-cache
+      # Download built packages
+      - name: Download built packages
+        uses: actions/download-artifact@v4
         with:
-          path: packages/config-yaml/node_modules
-          key: ${{ runner.os }}-config-yaml-node-modules-${{ hashFiles('packages/config-yaml/package-lock.json') }}
-
-      - uses: actions/cache@v4
-        id: openai-adapters-cache
-        with:
-          path: packages/openai-adapters/node_modules
-          key: ${{ runner.os }}-openai-adapters-node-modules-${{ hashFiles('packages/openai-adapters/package-lock.json') }}
-
-      - name: Build config-yaml
-        run: |
-          cd packages/config-yaml
-          npm run build
-
-      - name: Build openai-adapters
-        run: |
-          cd packages/openai-adapters
-          npm run build
+          name: built-packages-ubuntu-latest
+          path: .
 
       - name: Fix VSCode binary permissions
         run: |
