--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/follow-redirects": "^1.14.4",
+    "typescript": "^5.0.0",
     "vitest": "^3.2.0"
   }
 }
