--- a/.github/workflows/pr_checks.yaml
+++ b/.github/workflows/pr_checks.yaml
@@ -491,7 +491,7 @@ jobs:
             "npm_config_arch": "x64"
           },
           {
-            "os": "macos-latest",
+            "os": "macos-13",
             "platform": "darwin",
             "arch": "x64",
             "npm_config_arch": "x64"
