--- a/.github/workflows/test-macos-availability.yml
+++ b/.github/workflows/test-macos-availability.yml
@@ -1,7 +1,9 @@
 name: Test macOS Runner Availability
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - test-macos-latest-ci-fix
   
 jobs:
   test-macos-runners:
