--- a/extensions/vscode/package.json
+++ b/extensions/vscode/package.json
@@ -717,8 +717,8 @@
     "vscode-extension-tester": "^8.14.1"
   },
   "dependencies": {
-    "@continuedev/config-types": "file:../../packages/config-types",
-    "@continuedev/fetch": "file:../../packages/fetch",
+    "@continuedev/config-types": "^1.0.14",
+    "@continuedev/fetch": "^1.0.10",
     "@electron/rebuild": "^3.2.10",
     "@reduxjs/toolkit": "^1.9.3",
     "@vscode/ripgrep": "^1.15.9",
