--- a/.github/workflows/jetbrains-release.yaml
+++ b/.github/workflows/jetbrains-release.yaml
@@ -167,7 +167,7 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('gui/package-lock.json') }}
 
       - name: Build packages (Unix)
-        run: cd ../.. && ./scripts/build-packages.sh
+        run: cd ../.. && node ./scripts/build-packages.js
 
       # npm install core
       - name: Install core node_modules
