--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "homepage": "https://continue.dev",
   "dependencies": {
     "@continuedev/config-yaml": "^1.0.96",
-    "@continuedev/openai-adapters": "^1.0.48-beta",
+    "@continuedev/openai-adapters": "^1.4.1",
     "@continuedev/sdk": "^0.0.13",
     "@modelcontextprotocol/sdk": "^1.9.0",
     "@opentelemetry/api": "^1.9.0",
