--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -223,6 +223,23 @@
       ],
       "type": "shell",
       "problemMatcher": []
+    },
+    {
+      "label": "build-packages",
+      "type": "shell",
+      "windows": { "command": "./scripts/build-packages.ps1" },
+      "command": "./scripts/build-packages.sh",
+      "problemMatcher": [],
+      "presentation": {
+        "reveal": "silent",
+        "panel": "shared"
+      }
+    },
+    {
+      "label": "vscode-extension:build-with-packages",
+      "dependsOn": ["build-packages", "vscode-extension:build"],
+      "type": "shell",
+      "problemMatcher": []
     }
   ]
 }
